Fixed header menu hover effect and scrollbar part

--- a/wp-content/themes/wp-rock/src/scss/parts/_global.scss
+++ b/wp-content/themes/wp-rock/src/scss/parts/_global.scss
@@ -1,5 +1,8 @@
-html {
+html,
+body {
     scrollbar-gutter: stable;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
